tests/fixtures/positive/complexity/NamedArguments.kt
package complexity

fun foo(a: Int, b: Int, c: Int, d: Int) = a + b + c + d

fun bar() {
    foo(1, 2, 3, 4)
}
