tests/fixtures/negative/complexity/NamedArguments.kt
package complexity

fun foo(a: Int, b: Int) = a + b

fun bar() {
    foo(a = 1, b = 2)
}
